--- a/static/webapp/css/starter-template.css
+++ b/static/webapp/css/starter-template.css
@@ -21,14 +21,14 @@ header .container {
     width: 100%;
 }
 
-
 .navbar-input-group {
     display: inline;
 }
 
-.navbar-input-group-btn{
+.navbar-input-group-btn {
     float: left;
 }
+
 .profile {
     float: right;
     clear: both;
@@ -117,10 +117,10 @@ header .container {
 }
 
 .recipe-name {
-  height: 120px;
-  text-overflow:ellipsis;
-  overflow:hidden;
-  color: #CC3E27;
+    height: 120px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    color: #CC3E27;
 }
 
 .recipe-author {
@@ -368,7 +368,6 @@ header .container {
     margin-right: auto;
 }
 
-
 #gallery-indicator span.glyphicon {
     font-size: 200%;
 }
@@ -423,10 +422,10 @@ header .container {
     stroke-dashoffset: 2257;
 }
 
-.description-recipe-main{
-	height: 80px;
-	text-overflow:ellipsis;
-	overflow:hidden;
+.description-recipe-main {
+    height: 80px;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
 
 #salty.progress-bar {
@@ -453,34 +452,34 @@ header .container {
     color: #CC3E27;
 }
 
-.plus-profile:hover{
+.plus-profile:hover {
     color: #fff;
     background-color: #CC3E27;
     border-color: #D66552;
 }
 
-.btn-follow{
+.btn-follow {
     color: #CC3E27;
 }
 
-.btn-follow:hover{
+.btn-follow:hover {
     color: #fff;
     background-color: #CC3E27;
     border-color: #D66552;
 }
 
-.btn-unfollow{
+.btn-unfollow {
     color: #fff;
     background-color: #CC3E27;
     border-color: #D66552;
 }
 
-.btn-unfollow[disabled]{
+.btn-unfollow[disabled] {
     color: #CC3E27;
     opacity: .65;
 }
 
-.btn-unfollow:hover{
+.btn-unfollow:hover {
     color: #CC3E27;
     background-color: #eaaea4;
 }
@@ -518,4 +517,37 @@ header .container {
 
 .badge-counter {
     background-color: #CC3E27 !important;
+}
+
+.follow-list-item {
+    margin-left: 15px;
+    margin-right: 15px;
+}
+
+.follow-list-item img {
+    height: 80px;
+    width: auto;
+    margin: 6px 10px 6px 0;
+    float: left;
+}
+
+
+.follow-list-item .user-name {
+    color: #232323;
+    font-size: 16px;
+    font-style: normal;
+    margin: 8px 0 5px 5px;
+}
+
+.follow-list-item .user-name a{
+    color: #232323;
+}
+
+.follow-list-item .location {
+    color: #666666;
+}
+
+.follow-list-item .extra-info {
+    font-style: italic;
+    color: #424242;
 }
