--- a/templates/webapp/following.html
+++ b/templates/webapp/following.html
@@ -3,57 +3,25 @@
 {% load i18n %}
 
 {% block container %}
-<div class="panel panel-default">
-	<div class="row">
-		<div class="col-md-2">
-			
-		</div>
-		<div class="col-md-6">
-			<h1>{{ tag }}</h1>
-		</div>
-	</div>
-    {% for friend in following %}
-	<div class="row">
-		<div class="col-md-2">
-			
-		</div>
-		<div class="col-md-6">
-			<div class="col-md-12 panel panel-default panel-body">
-				<div class="row">
-                    <div class="col-md-5">
-                        <img alt=""  src="{% if friend.avatar %}{{ firend.avatar.url }}
-                                        {% else %}{% static 'webapp/image/profile_pic_anon.png' %}{% endif %}">
-                        <h3 class="pull-right">{{ friend.display_name }}</h3>
-                    </div>
-                    <div class="col-md-6">
+    <h1>{{ tag }}</h1>
 
-                            <!--<span class="label label-danger">Te sigue</span>-->
-                    </div>
+    <div class="row">
+        {% for follow in follows %}
+            {% with friend_profile=follow.user.profile.get %}
+                <div class="col-md-3 panel follow-list-item">
+                    <img class="img-rounded"
+                         src="{% if friend_profile.user.profile.get.avatar %}{{ friend_profile.user.profile.get.avatar.url }}{% else %}{% static 'webapp/image/profile_pic_anon.png' %}{% endif %}"/>
+
+                    <h3 class="user-name"><a href="{% url 'profile' friend_profile.user.username %}">
+                        {{ friend_profile.display_name }}</a></h3>
+
+                    <p class="location">
+                        <span class="glyphicon glyphicon-map-marker"></span><span>{{ friend_profile.location }}</span>
+                    </p>
+
+                    <p class="extra-info">No recipes yet</p>
                 </div>
-				<div class="row divider">
-					<div class="col-md-10">
-						<p>Se uni&oacute; el {{ friend.user.date_joined.date }}.</p>
-					</div>
-					<div class="col-md-2">
-                        {% if follow %}
-                            <a type="button" href="{% url 'profile' friend.user.username %}" class="btn btn-default btn-block plus-profile"><span class="glyphicon glyphicon-chevron-right"></span></a>
-                        {% else %}
-                            <a type="button" href="{% url 'profile' friend %}" class="btn btn-default btn-block plus-profile"><span class="glyphicon glyphicon-chevron-right"></span></a>
-                        {% endif %}
-                    </div>
-                </div>
-			</div>
-		</div>
-		<div class="col-md-2">
-        
-		</div>
-	</div>
-{% endfor %}
-</div>
-	<br />
-	<br />
-	<br />
-	<br />
-	<br />
-	<br />
+            {% endwith %}
+        {% endfor %}
+    </div>
 {% endblock %}
