--- a/templates/webapp/profile.html
+++ b/templates/webapp/profile.html
@@ -11,7 +11,7 @@
         <!-- Thumbnails -->
 
         <div class="thumbnail border-white">
-            <img alt="" src="{% if profile.get.avatar %}{{ profile.get.avatar.url }}
+            <img alt="" src="{% if profile.avatar %}{{ profile.avatar.url }}
                                     {% else %}{% static 'webapp/image/profile_pic_anon.png' %}{% endif %}">
 
             <br/>
