Corregido mostrar fotos reales de la receta en la portada

--- a/templates/webapp/main.html
+++ b/templates/webapp/main.html
@@ -9,7 +9,7 @@
       <div class="col-sm-6 col-md-4">
         <div class="thumbnail">
 			<br />
-          <img data-src="holder.js/300x200" alt="300x200" src="http://eladerezo.hola.com/wp-content/uploads/2008/03/Receta-de-espaguetis-con-gambas1.jpg" style="width: 300px; height: 200px;">
+          <img data-src="holder.js/300x200" alt="300x200" src="{{ recipe.pictures.0 }}" style="width: 300px; height: 200px;">
           <div class="caption">
             <div class="recipe-name">
 				<h1>{{ recipe.title }}</h1>
