--- a/static/webapp/css/starter-template.css
+++ b/static/webapp/css/starter-template.css
@@ -511,7 +511,7 @@ header .container {
     border-radius: 2px !important;
 }
 
-.thumbnail, .panel, .border-rect {
+/*.thumbnail,*/ .panel, .border-rect {
     border: 1px solid #d8d8d8 !important;
 }
 
