Corregida dirección de la url de seguidores y seguidos en profile.
Por error se pasaba el username del usuario logueado, en vez del usuario cuyo perfil se está consultando.
Es un despiste típico pero peligroso, la variable "user" en las plantillas de django corresponde al usuario logueado actualmente, se haya pasado desde la vista o no.

--- a/templates/webapp/profile.html
+++ b/templates/webapp/profile.html
@@ -17,8 +17,8 @@
             <br/>
             <ul class="list-group custom-set">
                 <li class="list-group-item"><span class="badge">{{ recipes|length }}</span>Recipes</li>
-                <li class="list-group-item"><span class="badge">{{ followers_list|length }}</span><a href="{% url 'followers' user.username %}">Seguidores</a></li>
-                <li class="list-group-item"><span class="badge">{{ profile.following|length }}</span><a href="{% url 'following' user.username %}">Siguiendo</a></li>
+                <li class="list-group-item"><span class="badge">{{ followers_list|length }}</span><a href="{% url 'followers' profile.user.username %}">Seguidores</a></li>
+                <li class="list-group-item"><span class="badge">{{ profile.following|length }}</span><a href="{% url 'following' profile.user.username %}">Siguiendo</a></li>
             </ul>
             <br/>
             {% if profile.user.id == user.id %}
