--- a/templates/webapp/recipe_template.html
+++ b/templates/webapp/recipe_template.html
@@ -19,7 +19,7 @@
             </div>
             <div class="recipe-author">
                 <h5>RECIPE BY</h5>
-                <span><a href="#">{{ receta.author.display_name }}</a></span>
+                <span><a href="/profile/{{ receta.author.user_name }}">{{ receta.author.display_name }}</a></span>
             </div>
             <div class="recipe-image">
                 {% for picture in receta.pictures %}
@@ -31,16 +31,15 @@
             <div class="recipe-votes">
                 {{ receta.positives|length }}
                 {% if user.is_authenticated %}
-                    <a id="btn-positive" class="btn"><img src="/static/webapp/image/voto_positivo.png"></a>
+                    <a id="btn-positive" class="btn"><i class="fa fa-plus-circle vote" style="color: #cc3e27"></i></a>
                 {% else %}
-                    <img src="/static/webapp/image/voto_positivo.png">
+                    <i class="fa fa-plus-circle vote"></i>
                 {% endif %}
-                <br>
                 {{ receta.negatives|length }}
                 {% if user.is_authenticated %}
-                    <a id="btn-negative" class="btn"><img src="/static/webapp/image/voto_negativo.png"></a>
+                    <a id="btn-negative" class="btn"><i class="fa fa-minus-circle vote"></i></a>
                 {% else %}
-                    <img src="/static/webapp/image/voto_negativo.png">
+                    <i class="fa fa-minus-circle vote"></i>
                 {% endif %}
             </div>
             <div id="error-vote" class="alert alert-dismissable alert-danger">
