--- a/templates/webapp/recipe_template.html
+++ b/templates/webapp/recipe_template.html
@@ -31,15 +31,15 @@
             <div class="recipe-votes">
                 {{ receta.positives|length }}
                 {% if user.is_authenticated %}
-                    <a id="btn-positive" class="btn"><i class="fa fa-plus-circle vote" style="color: #cc3e27"></i></a>
+                    <a id="btn-positive" class="plus btn btn-default vote"><span class="glyphicon glyphicon-plus"></span></a>
                 {% else %}
-                    <i class="fa fa-plus-circle vote"></i>
+                    <a class="plus btn btn-default vote"><span class="glyphicon glyphicon-plus"></a>
                 {% endif %}
                 {{ receta.negatives|length }}
                 {% if user.is_authenticated %}
-                    <a id="btn-negative" class="btn"><i class="fa fa-minus-circle vote"></i></a>
+                    <a id="btn-negative" class="plus btn btn-default vote"><span class="glyphicon glyphicon-minus"></a>
                 {% else %}
-                    <i class="fa fa-minus-circle vote"></i>
+                    <a class="plus btn btn-default vote"><span class="glyphicon glyphicon-minus"></a>
                 {% endif %}
             </div>
             <div id="error-vote" class="alert alert-dismissable alert-danger">
