--- a/static/webapp/css/starter-template.css
+++ b/static/webapp/css/starter-template.css
@@ -560,3 +560,13 @@ header .container {
 .follow-msg {
     text-align: center !important;
 }
+
+.recipe-title {
+    font-size: 40px;
+    color: #CC3E27;
+}
+
+.recipe-title:hover {
+    text-decoration: None;
+    color: #CC3E27;
+}
