Cambios menores en link al usuario que crea la receta tanto en main como en recipe-template.

--- a/static/webapp/css/starter-template.css
+++ b/static/webapp/css/starter-template.css
@@ -557,6 +557,12 @@ header .container {
     font-weight: bold;
 }
 
+.recipe-link:hover {
+    color: #CC3E27;
+    font-weight: bold;
+    text-decoration: None;
+}
+
 .follow-msg {
     text-align: center !important;
 }
