--- a/templates/webapp/base.html
+++ b/templates/webapp/base.html
@@ -64,6 +64,7 @@
                                 </a>
                                 <ul class="dropdown-menu">
                                     <li><a href="{% url 'profile' user.username %}">Profile</a></li>
+                                    <li><a href="">My recipes</a> </li>
                                     <li><a href="">Settings</a> </li>
                                     <li class="divider"></li>
                                     <li><a href="{% url 'logout' %}">Logout</a></li>
